# evalify

./: .gitignore  404.html  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  CREDITS.md  HISTORY.md  LICENSE  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: changelog.yml  codeql-analysis.yml  dev.yml  release.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
evalify/: __init__.py  evalify.py  metrics.py  utils.py
examples/: LFW.npz  LFW.py
history/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_evalify.py  test_experiment_real_data.py  test_metrics.py  test_utils.py
usage/: index.html
