[tool.poetry]
name = "evalify"
version = "1.0.0"
homepage = "https://github.com/ma7555/evalify"
description = "Evaluate your face or voice verification models literally in seconds."
authors = ["Mahmoud Bahaa <evalify@ma7555.anonaddy.com>"]
keywords = ["biometric verification", "biometric authentication", "evaluation"]
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "evalify" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.0"
numpy = "^2.0.0"
psutil = "^5.9.0"
scikit-learn = "^1.2.0"

# Optional Dependencies
ruff = { version = ">=0.7.2", optional = true }
pytest = { version = "^7.2.0", optional = true }
pytest-cov = { version = "^4.0.0", optional = true }
scipy = { version = ">=1.10.0", optional = true }
tox = { version = "^4.7.0", optional = true }
virtualenv = { version = ">=20.24.0", optional = true }
pip = { version = ">=23.2.0", optional = true }
mkdocs = { version = ">=1.4.0", optional = true }
mkdocs-material = { version = "^9.2.0", optional = true }
mkdocstrings = { version = ">=0.26.0", optional = true }
mkdocstrings-python = { version = ">=1.12.2", optional = true }
mkdocs-include-markdown-plugin = { version = ">=6.0.0", optional = true }
twine = { version = "^5.0.0", optional = true }
toml = { version = ">0.8.0", optional = true }
pyreadline3 = { version = "^3.4.1", optional = true }
poetry = { version = "^1.8.0", optional = true }

[tool.poetry.extras]
test = [
    "pytest",
    "ruff",
    "pytest-cov",
    "pyreadline3",
    "scipy",
]

dev = [
    "tox",
    "virtualenv",
    "pip",
    "twine",
    "toml",
    "poetry",
]

doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-include-markdown-plugin",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["evalify"]
